# gwdetchar

./: .coverage.Alexs-MBP.lan.30220.127034  .flake8  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .stylelintrc.yml  .travis.yml  :wq  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  _setup_utils.py  change.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  vcs.py
.github/: dependabot.yml
.github/workflows/: build.yml  docs.yml  lint.yml
.travis/: test-exe.sh
ci/: parse-conda-requirements.py  test-bin.sh  test-cli.sh
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/api/: index.rst  modules.rst
docs/conlog/: index.rst
docs/daq/: index.rst
docs/data/: index.rst
docs/html/: index.rst
docs/lasso/: index.rst
docs/nagios/: index.rst
docs/omega/: index.rst
docs/saturation/: index.rst
docs/scattering/: index.rst
gwdetchar/: __init__.py  _version.py  cds.py  cli.py  condor.py  conftest.py  conlog.py  const.py  dac.py  daq.py  lasso.py  mct.py  misc.py  nagios.py  overflow.py  plot.py  saturation.py  scattering.py  utils.py
gwdetchar/gracedb/: __main__.py  gracedb.py
gwdetchar/io/: __init__.py  datafind.py  html.py  ligolw.py
gwdetchar/io/tests/: __init__.py  test_datafind.py  test_html.py  test_ligolw.py
gwdetchar/lasso/: __init__.py  __main__.py  core.py  old.py  plot.py
gwdetchar/lasso/tests/: __init__.py  data.gwf  test_core.py  test_main.py  test_plot.py
gwdetchar/nagios/: __init__.py  __main__.py  core.py
gwdetchar/nagios/tests/: __init__.py  test_main.py  test_nagios.py
gwdetchar/omega/: __init__.py  __main__.py  batch.py  config.py  core.py  html.py  plot.py  scan.py
gwdetchar/omega/tests/: test_batch.py  test_config.py  test_core.py  test_html.py  test_main.py  test_plot.py
gwdetchar/saturation/: __init__.py  __main__.py  core.py
gwdetchar/saturation/tests/: __init__.py  test_saturation.py
gwdetchar/scattering/: __init__.py  __main__.py  core.py  plot.py  simple.py
gwdetchar/scattering/tests/: __init__.py  test_core.py  test_main.py  test_plot.py  test_simple.py
gwdetchar/tests/: __init__.py  test_cds.py  test_cli.py  test_condor.py  test_conlog.py  test_const.py  test_daq.py  test_io_ligolw.py  test_nagios.py  test_plot.py  test_saturation.py  test_scattering.py  test_utils.py
gwdetchar/utils/: __init__.py  cli.py  condor.py  daq.py  plot.py  segments.py  utils.py
gwdetchar/utils/tests/: __init__.py  test_cds.py  test_cli.py  test_condor.py  test_daq.py  test_plot.py  test_segments.py  test_utils.py
gwdetchar/vetodef/: __init__.py  ligolw_vetodef_append.py  ligolw_vetodef_create.py  ligolw_vetodef_validate.py  validate.py
gwdetchar/vetodef/tests/: __init__.py  test_ligolw_vetodef_append.py  test_ligolw_vetodef_create.py  test_ligolw_vetodef_validate.py  test_validate.py
share/js/: gwdetchar-omega.js  gwdetchar.js
share/sass/: gwdetchar-omega.scss  gwdetchar.scss
tests/: common.py  test_cli.py
