[versioneer]
VCS = git
style = pep440
versionfile_source = gwdetchar/_version.py
versionfile_build = gwdetchar/_version.py
tag_prefix = 
parentdir_prefix =

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
; print skip reasons
addopts = -r s

[coverage:run]
source = gwdetchar
omit =
	gwdetchar/*version*.py
	gwdetchar/tests/*
	gwdetchar/io/tests/*
	gwdetchar/lasso/tests/*
	gwdetchar/nagios/tests/*
	gwdetchar/nagios/__main__.py
	gwdetchar/omega/__main__.py
	gwdetchar/omega/tests/*
	gwdetchar/scattering/tests/*
	gwdetchar/scattering/__main__.py

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	ci/,
	docs/,
	gwdetchar/_version.py,
	versioneer.py,
per-file-ignores =
	__init__.py:F401,
