; -- metadata ---------------

[versioneer]
VCS = git
style = pep440
versionfile_source = gwdetchar/_version.py
versionfile_build = gwdetchar/_version.py
tag_prefix = 
parentdir_prefix =

[bdist_wheel]
universal = 1

[metadata]
name = gwdetchar
author = Alex Urban, Duncan Macleod
author_email = alexander.urban@ligo.org
license = GPL-3.0-or-later
license_file = LICENSE
keywords = physics, astronomy, gravitational-waves, ligo
url = https://github.com/gwdetchar/gwdetchar/
description = A python package for gravitational-wave detector characterisation
long_description = file: README.rst
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: POSIX
	Operating System :: Unix
	Operating System :: MacOS
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
	setuptools >=30.3.0
install_requires =
	astropy >=1.2
	gwdatafind
	gwpy >=0.13.0
	gwtrigfind
	MarkupPy >=1.14
	matplotlib >=2.0.0
	numpy >=1.16
	pandas
	pycondor
	pytz
	coloredlogs
	scikit-learn
	scipy >=1.2.0
	setuptools
	pygments
tests_require =
	flake8
	pytest >=3.3.0
	pytest-cov >=2.4.0
scripts =
	bin/gwdetchar-conlog
	bin/gwdetchar-lasso-correlation
	bin/gwdetchar-mct
	bin/gwdetchar-overflow
	bin/gwdetchar-scattering
	bin/gwdetchar-slow-correlation
	bin/gwdetchar-software-saturations

[options.entry_points]
console_scripts =
	gwdetchar-conlog = gwdetchar.conlog:main
	gwdetchar-nagios = gwdetchar.nagios.__main__:main
	gwdetchar-omega = gwdetchar.omega.__main__:main
	gwdetchar-omega-batch = gwdetchar.omega.batch:main
	gwdetchar-scattering-simple = gwdetchar.scattering.__main__:main

[options.extras_require]
doc =
	sphinx
	numpydoc
	sphinx_rtd_theme
	sphinxcontrib_programoutput
	sphinxcontrib_epydoc

[tool:pytest]
; print skip reasons
addopts = -r s

; -- tools ------------------

[coverage:run]
source = gwdetchar
omit =
	gwdetchar/*version*.py
	gwdetchar/nagios/__main__.py
	gwdetchar/scattering/__main__.py
	gwdetchar/tests/*.py
	gwdetchar/**/tests/*.py

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	ci/,
	docs/,
	gwdetchar/_version.py,
	versioneer.py,
per-file-ignores =
	__init__.py:F401,
