; -- metadata ---------------

[versioneer]
VCS = git
style = pep440
versionfile_source = gwdetchar/_version.py
versionfile_build = gwdetchar/_version.py
tag_prefix = 
parentdir_prefix =

[bdist_wheel]
universal = 1

[metadata]
name = gwdetchar
author = Alex Urban, Duncan Macleod
author_email = alexander.urban@ligo.org
license = GPL-3.0-or-later
license_file = LICENSE
keywords = physics, astronomy, gravitational-waves, ligo
url = https://github.com/gwdetchar/gwdetchar/
description = A python package for gravitational-wave detector characterisation
long_description = file: README.rst
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: POSIX
	Operating System :: Unix
	Operating System :: MacOS
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
	setuptools >=30.3.0
install_requires =
	astropy >=3.0.0
	beautifulsoup4
	gwdatafind
	gwpy >=2.0.0
	gwtrigfind
	lalsuite
	lscsoft-glue >=2.0.0
	lxml
	MarkupPy >=1.14
	matplotlib >=3.1.0
	numpy >=1.16
	pandas
	pycondor
	pygments >=2.7.3
	pytz
	coloredlogs
	scikit-learn
	scipy >=1.2.0
tests_require =
	flake8
	pytest >=3.3.0
	pytest-cov >=2.4.0

[options.entry_points]
console_scripts =
	gwdetchar-conlog = gwdetchar.conlog:main
	gwdetchar-lasso-correlation = gwdetchar.lasso.__main__:main
	gwdetchar-mct = gwdetchar.mct:main
	gwdetchar-nagios = gwdetchar.nagios.__main__:main
	gwdetchar-omega = gwdetchar.omega.__main__:main
	gwdetchar-omega-batch = gwdetchar.omega.batch:main
	gwdetchar-overflow = gwdetchar.overflow:main
	gwdetchar-slow-correlation = gwdetchar.lasso.old:main
	gwdetchar-software-saturations = gwdetchar.saturation.__main__:main
	gwdetchar-scattering = gwdetchar.scattering.__main__:main
	gwdetchar-scattering-simple = gwdetchar.scattering.simple:main

[options.extras_require]
doc =
	sphinx
	numpydoc
	sphinx_bootstrap_theme
	sphinxcontrib-programoutput

[tool:pytest]
; print skip reasons
addopts = -r s

; -- tools ------------------

[coverage:run]
source = gwdetchar
omit =
	gwdetchar/*version*.py
	gwdetchar/tests/*.py
	gwdetchar/**/tests/*.py
	; omit certain scripts for now, will add coverage in a future PR
	gwdetchar/mct.py
	gwdetchar/overflow.py
	gwdetchar/lasso/__main__.py
	gwdetchar/lasso/old.py
	gwdetchar/saturation/__main__.py

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	ci/,
	docs/,
	gwdetchar/_version.py,
	versioneer.py,
per-file-ignores =
	__init__.py:F401,

[rstcheck]
report_level = SEVERE
ignore_languages = bash
ignore_directives = autosummary,command-output
